# OmniRoute

./: .dockerignore  .editorconfig  .env.example  .env.example.observability  .gitattributes  .gitignore  .mergify.yml  .npmignore  .pr-body.md  .size-limit.json  ADR.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  GEMINI.md  Justfile  LICENSE  PERFORMANCE_AUDIT_v3.8.48.md  PLAN.md  PLANO-QUALITY-GATES-FASE7.md  PR_DESCRIPTION.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  SECURITY.md  SPEC.md  STATUS.md  SUPPORT.md  ZWS_README_V2.md  audit_scorecard.json  (+52 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs  tray.rs
backend-rust/: Cargo.toml
backend-rust/crates/omniroute-cli/: Cargo.toml
backend-rust/crates/omniroute-cli/src/: main.rs
backend-rust/crates/omniroute-core/: Cargo.toml
backend-rust/crates/omniroute-core/src/: auth.rs  combo.rs  error.rs  format.rs  lib.rs  model.rs  provider.rs  quota.rs  request.rs  response.rs
backend-rust/crates/omniroute-pipeline/: Cargo.toml
backend-rust/crates/omniroute-providers/: Cargo.toml
backend-rust/crates/omniroute-sdk/: Cargo.toml
backend-rust/crates/omniroute-sdk/src/: lib.rs
backend-rust/crates/omniroute-server/: Cargo.toml
backend-rust/crates/omniroute-server/src/: main.rs
backend-rust/crates/omniroute-storage/: Cargo.toml
backend-rust/docs/: 01-AUDIT.md
crates/omniroute-agent/: Cargo.toml
crates/omniroute-agent/src/: lib.rs  main.rs
crates/omniroute-agent/src/health/: mod.rs  types.rs
crates/omniroute-agent/src/metrics/: composite.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs
crates/omniroute-agent/src/prometheus/: mod.rs
crates/omniroute-agent/tests/: integration_test.rs
crates/omniroute-ffi/: Cargo.toml
crates/omniroute-ffi/crates/bifrost-bridge/: Cargo.toml
crates/omniroute-ffi/crates/combo-scorer/: Cargo.toml
crates/omniroute-ffi/crates/signature-cache/: Cargo.toml
crates/omniroute-ffi/crates/sse-chunking/: Cargo.toml
crates/omniroute-rs/: .gitignore  Cargo.toml  README.md
crates/omniroute-rs/crates/omniroute-api/: Cargo.toml
crates/omniroute-rs/crates/omniroute-bifrost/: Cargo.toml
crates/omniroute-rs/crates/omniroute-cli/: Cargo.toml
crates/omniroute-rs/crates/omniroute-compression/: Cargo.toml
crates/omniroute-rs/crates/omniroute-core/: Cargo.toml
crates/omniroute-rs/crates/omniroute-mcp/: Cargo.toml
crates/omniroute-rs/crates/omniroute-providers/: Cargo.toml
crates/omniroute-rs/crates/omniroute-router/: Cargo.toml
crates/omniroute-rs/crates/omniroute-storage/: Cargo.toml
extensions/argis/pheno-errors/: AGENTS.md  Cargo.toml  deny.toml  justfile  llms.txt  llvm-cov.toml
extensions/argis/pheno-errors/.github/: CODEOWNERS
extensions/argis/pheno-errors/examples/: otel_quickstart.rs
extensions/argis/pheno-errors/scripts/: coverage.sh
extensions/argis/pheno-errors/src/: lib.rs
extensions/argis/pheno-flags/: AGENTS.md  Cargo.toml  deny.toml  justfile  llms.txt  llvm-cov.toml  pheno-flags.cdx.json
extensions/argis/pheno-flags/benches/: Cargo.toml  flags_lookup.rs  flags_stress.rs
extensions/argis/pheno-flags/examples/: otel_quickstart.rs  quickstart.rs
extensions/argis/pheno-flags/findings/: 71-pillar-2026-06-20-pheno-flags.md
extensions/argis/pheno-flags/scripts/: coverage.sh
extensions/argis/pheno-flags/src/: lib.rs
extensions/argis/pheno-flags/tests/: flag_test.rs
extensions/argis/pheno-llms-txt/: AGENTS.md  CHANGELOG.md  README.md  SPEC.md  WORKLOG.md  llms.txt  pyproject.toml  ruff.toml
extensions/argis/pheno-llms-txt/docs/: governance.md
extensions/argis/pheno-llms-txt/examples/: quickstart.py
extensions/argis/pheno-llms-txt/tests/: test_generate.py  test_spec_compliance.py
extensions/argis/pheno-otel/: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SPEC.md  STATUS.md  WORKLOG.md  deny.toml  dependabot.yml  llms.txt  llvm-cov.toml
extensions/argis/pheno-otel/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
extensions/argis/pheno-otel/src/: lib.rs
extensions/argis/pheno-port-adapter/: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  SECURITY.md  SPEC.md  STATUS.md  WORKLOG.md  deny.toml  justfile  llms.txt  llvm-cov.toml
extensions/argis/pheno-port-adapter/.devcontainer/: devcontainer.json
extensions/argis/pheno-port-adapter/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
extensions/argis/pheno-port-adapter/docs/: architecture.md
extensions/argis/pheno-port-adapter/examples/: otel_quickstart.rs
extensions/argis/pheno-port-adapter/scripts/: coverage.sh
extensions/argis/pheno-port-adapter/src/: lib.rs
extensions/argis/pheno-scaffold-kit/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  WORKLOG.md  llms.txt  pyproject.toml  ruff.toml
extensions/argis/pheno-scaffold-kit/docs/: governance.md
extensions/argis/pheno-scaffold-kit/examples/: quickstart.py
extensions/argis/pheno-scaffold-kit/tests/: test_integration.py  test_render.py
extensions/argis/pheno-vibecoding-guard/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  WORKLOG.md  llms.txt  pyproject.toml  ruff.toml
extensions/argis/pheno-vibecoding-guard/docs/: governance.md
extensions/argis/pheno-vibecoding-guard/examples/: quickstart.py
extensions/argis/pheno-vibecoding-guard/tests/: test_rules.py  test_scanner.py
extensions/argis/pheno-worklog-schema/: AGENTS.md  CHANGELOG.md  LICENSE-APACHE  README.md  SPEC.md  WORKLOG.md  llms.txt  pyproject.toml  ruff.toml
omniroute-rs/crates/app/: Cargo.toml
omniroute-rs/crates/providers/: Cargo.toml
omniroute-rs/crates/tokn-ffi/: .gitignore  Cargo.toml  README.md
omniroute-rs/crates/transport/: Cargo.toml
(+6974 files in other folders)
