[package]
name = "omniroute-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OmniRoute core types, traits, and errors (no I/O)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
mime = { workspace = true }
