[package]
name = "omniroute-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OmniRoute streaming, compression (RTK+Caveman), cache, circuit breaker"

[dependencies]
omniroute-core = { path = "../omniroute-core" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
