[package]
name = "omniroute-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OmniRoute typed Rust SDK"

[dependencies]
omniroute-core = { path = "../omniroute-core" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
