[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pheno-vibecoding-guard"
version = "0.1.0"
description = "Static guard rails for AI-assisted coding sessions (lib substrate, ADR-023)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "KooshaPari", email = "koosha@phenotype.local"},
]
keywords = ["vibecoding", "ai-assisted", "guard", "lint", "phenotype"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "structlog>=24.1.0",  # ADR-036B: pheno-tracing mirror for Python
    "click>=8.1.7",       # CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pheno-vibecoding-guard = "pheno_vibecoding_guard.__main__:main"

[project.urls]
Homepage = "https://github.com/KooshaPari/phenotype-apps"
Issues = "https://github.com/KooshaPari/phenotype-apps/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pheno_vibecoding_guard*"]

[tool.setuptools.package-data]
pheno_vibecoding_guard = ["py.typed"]

# === ruff (per ADR-039, replaces deny.toml for Python) ===
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

# === pytest (coverage gate per ADR-040, lib tier 80%) ===
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src/pheno_vibecoding_guard"]
branch = true

[tool.coverage.report]
# ADR-040: 80% lib gate
fail_under = 80
show_missing = true
skip_covered = false
