[package]
name = "omniroute-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
omniroute-core = { path = "../core" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
