[package]
name = "omniroute-tokn-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "napi-rs FFI surface for omniroute-combo routing. Sync-only boundary, ≤5ms p99 budget."

[build-dependencies]
napi-build = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
omniroute-combo = { path = "../combo" }
omniroute-core = { path = "../core" }
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
